--- a/sampleapp_fe/package.json
+++ b/sampleapp_fe/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "html-webpack-plugin": "^2.28.0",
     "path": "^0.12.7",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^3.0.0",
