--- a/sampleapp_fe/package.json
+++ b/sampleapp_fe/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "html-webpack-plugin": "^2.28.0",
+    "jest": "^20.0.4",
     "path": "^0.12.7",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
