--- a/sampleapp_fe/package.json
+++ b/sampleapp_fe/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "html-webpack-plugin": "^2.28.0",
-    "jest": "^20.0.4",
     "path": "^0.12.7",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -18,7 +17,10 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^2.9.1",
+    "jest": "^20.0.4",
+    "react-test-renderer": "^15.6.1"
   },
   "scripts": {
     "start": "webpack-dev-server",
